--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=1f6C97BqkvTOBDCz8DTamAVqiUfQr5Nk09ZnIvgafbY=
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyDpZEOb90vAuoRTpM--HoXWf3x20-c8_uI
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=hunter-xo-website.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=hunter-xo-website
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=hunter-xo-website.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=1014111076157
+NEXT_PUBLIC_FIREBASE_APP_ID=1:1014111076157:web:a61efada35d5ea54490f54
+# NEXTAUTH_URL=http://localhost:3000
+# NEXTAUTH_SECRET=1f6C97BqkvTOBDCz8DTamAVqiUfQr5Nk09ZnIvgafbY=
 GOOGLE_CLIENT_ID=303788734694-pod0n4rq85oujdkbors9q8i2cnfpshen.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRETE=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
