--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "firebase": "^10.5.0",
     "next": "13.5.6",
     "next-auth": "^4.24.3",
     "react": "^18",
