--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
     "react-password-strength-bar": "^0.4.1",
     "react-simplemde-editor": "^5.2.0",
     "uuidv4": "^6.2.13",
