--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "easymde": "^2.18.0",
     "encoding": "^0.1.13",
     "firebase": "^10.5.0",
-    "next": "13.5.6",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.0.1",
+    "node": "^21.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-password-strength-bar": "^0.4.1",
     "react-simplemde-editor": "^5.2.0",
@@ -31,7 +32,7 @@
     "@types/zxcvbn": "^4.4.3",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6",
+    "eslint-config-next": "^14.0.1",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
