--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^4.12.0",
     "react-password-strength-bar": "^0.4.1",
     "react-simplemde-editor": "^5.2.0",
     "uuidv4": "^6.2.13",
