--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.12.0",
+    "react-markdown": "^9.0.1",
     "react-password-strength-bar": "^0.4.1",
     "react-simplemde-editor": "^5.2.0",
     "uuidv4": "^6.2.13",
@@ -27,6 +28,7 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
